# trading-platform

./: .dockerignore  .env.example  .gitignore  README.md
.github/workflows/: ci.yml
api-service-java/: Dockerfile  README.md  pom.xml
api-service-java/src/main/java/com/tradingplatform/api/: ApiServiceApplication.java
api-service-java/src/main/java/com/tradingplatform/api/account/: AccountController.java
api-service-java/src/main/java/com/tradingplatform/api/auth/: AuthController.java  AuthService.java
api-service-java/src/main/java/com/tradingplatform/api/auth/dto/: LoginRequest.java  RefreshRequest.java  RegisterRequest.java  TokenResponse.java
api-service-java/src/main/java/com/tradingplatform/api/common/: ApiException.java  GlobalExceptionHandler.java
api-service-java/src/main/java/com/tradingplatform/api/config/: GrpcClientConfig.java  SecurityConfig.java
api-service-java/src/main/java/com/tradingplatform/api/domain/: Account.java  FillRecord.java  OrderEntity.java  OrderStatus.java  OrderType.java  Side.java  User.java
api-service-java/src/main/java/com/tradingplatform/api/engine/: MatchingEngineClient.java  OrderFillConsumer.java
api-service-java/src/main/java/com/tradingplatform/api/order/: OrderController.java  OrderService.java
api-service-java/src/main/java/com/tradingplatform/api/order/dto/: OrderResponse.java  PlaceOrderRequest.java
api-service-java/src/main/java/com/tradingplatform/api/repository/: AccountRepository.java  FillRepository.java  OrderRepository.java  UserRepository.java
api-service-java/src/main/java/com/tradingplatform/api/security/: AuthenticatedUser.java  JwtAuthenticationFilter.java  JwtService.java
api-service-java/src/main/resources/: application.yml
api-service-java/src/main/resources/db/migration/: V1__init.sql  V2__fills.sql
api-service-java/src/test/java/com/tradingplatform/api/: OrderLifecycleIT.java
api-service-java/src/test/java/com/tradingplatform/api/order/: OrderServiceTest.java
api-service-java/src/test/java/com/tradingplatform/api/security/: JwtServiceTest.java
docs/: ADR-001-language-choices.md
frontend-web/: .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend-web/src/: App.tsx  index.css  vite-env.d.ts
frontend-web/src/api/: client.ts  sim.ts  types.ts
frontend-web/src/auth/: AuthContext.tsx
frontend-web/src/components/: FillsFeed.tsx  LoginPage.tsx  ModelsView.tsx  OrderBook.tsx  OrderForm.tsx  OrderHistory.tsx  SimulationView.tsx  TopBar.tsx  TradingView.tsx
frontend-web/src/components/charts/: LineChart.tsx
frontend-web/src/components/sim/: BacktestPanel.tsx  ImpactPanel.tsx  ScenarioPanel.tsx
frontend-web/src/hooks/: useFills.ts  useOrderBook.ts
gateway-go/: Dockerfile  Makefile  README.md  go.mod  go.sum
gateway-go/cmd/gateway/: main.go
gateway-go/internal/auth/: jwt.go  jwt_test.go
gateway-go/internal/cache/: book.go  book_test.go  redis.go
gateway-go/internal/config/: config.go  config_test.go
gateway-go/internal/engine/: client.go
gateway-go/internal/hub/: hub.go  hub_test.go
gateway-go/internal/kafka/: consumer.go
gateway-go/internal/market/: pump.go
gateway-go/internal/metrics/: metrics.go
gateway-go/internal/middleware/: auth.go  cors.go  logging.go  ratelimit.go  ratelimit_test.go
gateway-go/internal/pb/: README.md
gateway-go/internal/server/: rest.go  server.go  websocket.go
gateway-go/loadtest/: ws_load.js
infra/: README.md  docker-compose.yml  prometheus.yml
infra/e2e/: e2e_test.py  run_e2e.sh
infra/grafana/dashboards/: trading-platform.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/k8s/: 00-namespace-and-config.yaml  10-infra.yaml  20-apps.yaml  30-observability.yaml  README.md
infra/sim/: agents.py  market_sim.py
matching-engine-cpp/: CMakeLists.txt  Dockerfile
matching-engine-cpp/src/: book_registry.cpp  book_registry.hpp  engine_service.cpp  engine_service.hpp  kafka_bridge.cpp  kafka_bridge.hpp  main.cpp  metrics.cpp  metrics.hpp  order_book.cpp  order_book.hpp  proto_convert.hpp  types.hpp
matching-engine-cpp/tests/: order_book_test.cpp  standalone_check.cpp
proto/: trading.proto
sim-service/: Dockerfile  README.md  analytics.py  app.py  data.py  ml.py  requirements.txt
